--- a/css/advantages.css
+++ b/css/advantages.css
@@ -40,7 +40,7 @@
 .advantages__text {
     margin: 0 auto;
     margin-bottom: 50px;
-    width: 724px;
+    max-width: 724px;
     font-size: 18px;
     font-weight: 400;
     line-height: 140.625%;
@@ -48,8 +48,10 @@
 
 .advantages__list {
     display: flex;
-    justify-content: center;
-    column-gap: 50px;
+    justify-content: space-between;
+    max-width: 934px;
+    margin: 0 auto;
+    /* column-gap: 50px; */
 }
 
 .advantages__list-item {
