--- a/css/footer.css
+++ b/css/footer.css
@@ -18,7 +18,7 @@
 }
 
 .footer__copyrights {
-    width: 127px;
+    max-width: 127px;
     font-size: 12px;
     font-weight: 500;
     line-height: 140.625%;
