--- a/css/style.css
+++ b/css/style.css
@@ -69,3 +69,9 @@ iframe {
     margin: 0 auto;
     padding: 0 30px;
 }
+
+@media (max-width: 1024px) {
+    .container {
+        max-width: 1024px;
+    }
+}
