--- a/css/client-contact.css
+++ b/css/client-contact.css
@@ -28,6 +28,7 @@
     text-align: center;
     font-weight: 500;
     line-height: normal;
+    color: #ffffffcc;
 }
 
 .client-contact__form {
@@ -55,6 +56,7 @@
 
 .client-contact__input::placeholder {
     color: #ffffff80;
+    font-size: 22px;
     line-height: normal;
 }
 
@@ -73,7 +75,6 @@
 .client-contact__agreement {
     text-align: center;
     font-size: 20px;
-    font-weight: 400;
     line-height: normal;
 }
 
