--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,10 +1,11 @@
 .contacts {
     display: flex;
-    flex-flow: column;
+    flex-direction: column;
     align-items: center;
 }
 
 .contacts__phone {
+    margin-bottom: 4px;
     font-size: 24px;
     font-style: normal;
     font-weight: 400;
