--- a/css/hero.css
+++ b/css/hero.css
@@ -10,7 +10,7 @@
     z-index: -1;
     background-image: url('../img/stag-office-mockup.jpeg');
     background-position: center;
-    background-size: 105%;
+    background-size: cover;
     opacity: 0.15;
     width: 100%;
     height: 100%;
@@ -18,7 +18,7 @@
 
 .hero__wrapper {
     display: flex;
-    flex-flow: column;
+    flex-direction: column;
     align-items: center;
 }
 
@@ -44,4 +44,7 @@
     border-radius: 50px;
     background: #15A9CB;
     box-shadow: 0px 4px 25px 0px #15a9cb4d;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: normal;
 }
