Внесены изменения в стили

--- a/css/advantages.css
+++ b/css/advantages.css
@@ -83,3 +83,105 @@
     font-weight: 500;
     line-height: 140.625%;
 }
+
+@media (max-widthL: 1024px) {
+    .advantages__title {
+        margin-bottom: 23px;
+        font-size: 32px;
+    }
+
+    .advantages__subtitle {
+        margin-bottom: 33px;
+        font-size: 20px;
+    }
+    
+    .advantages__subtitle::before, .advantages__subtitle::after {
+        content: "";
+        width: 40px;
+        height: 2px;
+    }
+    
+    .advantages__subtitle::before {
+        margin-right: 20px;
+    }
+    
+    .advantages__subtitle::after {
+        margin-left: 20px;
+    }
+
+    .advantages__text {
+        margin-bottom: 50px;
+        max-width: 666px;
+        font-size: 16px;
+    }
+
+    .advantages__list {
+        max-width: 870px;
+    }
+    
+    .advantages__list-item-title {
+        width: 104px;
+        height: 104px;
+        margin-bottom: 26px;
+        font-size: 52px;
+        line-height: 140.625%;
+    }
+    
+    .advantages__list-item-text {
+        width: 180px;
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 650px) {
+    .advantages__list {
+        justify-content: center;
+        column-gap: 50px;
+    }
+}
+
+@media (max-width: 320px) {
+    .advantages {
+        padding: 30px 0 60px;
+    }
+
+    .advantages__title {
+        max-width: 100%;
+        margin-bottom: 15px;
+        font-size: 20px;
+    }
+
+    .advantages__subtitle {
+        margin-bottom: 26px;
+        font-size: 16px;
+    }
+    
+    .advantages__subtitle::before, .advantages__subtitle::after {
+        content: "";
+        width: 20px;
+        height: 1px;
+    }
+
+    .advantages__subtitle::before {
+        margin-right: 22px;
+    }
+    
+    .advantages__subtitle::after {
+        margin-left: 22px;
+    }
+
+    .advantages__text {
+        max-width: 100%;
+        margin-bottom: 40px;
+        font-size: 14px;
+    }
+
+    .advantages__list {
+        row-gap: 40px;
+        max-width: 190px;
+    }
+    
+    .advantages__list-item-text {
+        width: 100%;
+    }
+}
