--- a/css/header.css
+++ b/css/header.css
@@ -11,9 +11,26 @@
     justify-content: space-between;
 }
 
-.header__contacts {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.header__phone-icon {
+    display: none;
 }
 
+@media (max-width: 1024px) {
+    .header {
+        padding-top: 26px;
+    }
+}
+
+@media (max-width: 320px) {
+    .header {
+        padding-top: 15px;
+    }
+
+    .header__contacts {
+        display: none;
+    }
+
+    .header__phone-icon {
+        display: block;
+    }
+}
