--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,6 @@ iframe {
 }
 
 .phone-icon__wrapper {
-    display: none;
     width: 25px;
     height: 24px;
 }
@@ -84,4 +83,25 @@ iframe {
     display: block;
     width: fit-content;
     height: 24px;
+}
+
+@media (max-width: 1024px) {
+    .container {
+        max-width: 1024px;
+    }
+
+    .logo {
+        width: 60px;
+    }
+}
+
+@media (max-width: 320px) {
+    .container {
+        max-width: 320px;
+        padding: 0 15px;
+    }
+
+    .logo {
+        width: 30px;
+    }
 }
