--- a/css/client-contact.css
+++ b/css/client-contact.css
@@ -82,3 +82,84 @@
     color: #4A76A8;
     text-decoration: underline;
 }
+
+@media (max-width: 1024px) {
+    .client-contact {
+        padding-bottom: 56px;
+    }
+
+    .client-contact__title {
+        margin-bottom: 16px;
+        font-size: 32px;
+    }
+    
+    .client-contact__text {
+        margin-bottom: 50px;
+        font-size: 20px;
+    }
+
+    .client-contact__form {
+        max-width: 377px;
+        margin-bottom: 30px;
+    }
+
+    .client-contact__input {
+        margin-bottom: 20px;
+        padding: 8px 23px;
+        font-size: 20px;
+        border: 2px solid #FFFFFF;
+    }
+
+    .client-contact__input::placeholder {
+        font-size: 20px;
+        line-height: normal;
+    }
+    
+    .client-contact__agreement {
+        font-size: 17px;
+    }
+}
+
+@media (max-width: 320px) {
+    .client-contact {
+        padding: 30px 0;
+    }
+
+    .client-contact__title {
+        margin-bottom: 10px;
+        font-size: 20px;
+    }
+    
+    .client-contact__text {
+        margin-bottom: 35px;
+        font-size: 12px;
+    }
+
+    .client-contact__form {
+        max-width: 100%;
+    }
+
+    .client-contact__input {
+        margin-bottom: 15px;
+        padding: 6px 18px;
+        font-size: 14px;
+        border: 1px solid #FFFFFF;
+    }
+
+    .client-contact__input:nth-child(3) {
+        margin-bottom: 45px;
+    }
+
+    .client-contact__input::placeholder {
+        font-size: 14px;
+    }
+
+    .client-contact__button {
+        padding: 10px 26px;
+        font-size: 16px;
+    }
+
+    .client-contact__agreement {
+        font-size: 11px;
+    }
+}
