--- a/css/hero.css
+++ b/css/hero.css
@@ -8,9 +8,11 @@
     position: absolute;
     top: 0;
     z-index: -1;
+    background: rgba(47, 50, 75, 0.85);
     background-image: url('../img/stag-office-mockup.jpeg');
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
     opacity: 0.15;
     width: 100%;
     height: 100%;
@@ -47,4 +49,60 @@
     font-size: 20px;
     font-weight: 500;
     line-height: normal;
+}
+
+@media (max-width: 1024px) {
+    .hero {
+        padding: 156px 0 70px;
+    }
+
+    .hero__title {
+        max-width: 780px;
+        margin-bottom: 27.5px;
+        font-size: 40px;
+    }
+
+    .hero__text {
+        max-width: 754px;
+        margin-bottom: 60px;
+        font-size: 18px;
+        line-height: 140.625%;
+    }
+
+    .hero__button {
+        padding: 11px 49px;
+    }
+}
+
+@media (max-width: 320px) {
+    .hero {
+        padding: 110px 0 65px;
+    }
+
+    .hero::after {
+        background-position: 13%;
+        background-size: 243.889%;
+    }
+
+    .hero__title {
+        max-width: 100%;
+        margin-bottom: 23px;
+        font-size: 20px;
+    }
+
+    .hero__text {
+        max-width: 100%;
+        margin-bottom: 54px;
+        font-size: 14px;
+        line-height: 140.625%;
+    }
+
+    .hero__text_container_320px {
+        display: none;
+    }
+
+    .hero__button {
+        padding: 9px 29px;
+        font-size: 16px;
+    }
 }
