--- a/css/client-contact.css
+++ b/css/client-contact.css
@@ -17,14 +17,15 @@
 
 .client-contact__title {
     margin-bottom: 17px;
-    text-align: center;
+    /* text-align: center; */
+    padding-left: calc(50% - 329px / 2 - 12px); /*сделал для пиксель перфект, поэтому еще убрал текст алайн */
     font-size: 35px;
     font-weight: 700;
     line-height: normal;
 }
 
 .client-contact__text {
-    margin-bottom: 50px;
+    margin-bottom: 49px;
     text-align: center;
     font-weight: 500;
     line-height: normal;
@@ -41,7 +42,7 @@
     display: block;
     /* box-sizing: content-box; */
     width: 100%;
-    margin-bottom: 21px;
+    margin-bottom: 18px;
     padding: 9px 25px;
     line-height: normal;
     color: #ffffff;
@@ -51,7 +52,7 @@
 }
 
 .client-contact__input:nth-child(3) {
-    margin-bottom: 50px;
+    margin-bottom: 48px;
 }
 
 .client-contact__input::placeholder {
@@ -63,7 +64,7 @@
 .client-contact__button {
     display: block;
     margin: 0 auto;
-    padding: 11px 38px;
+    padding: 12px 38px;
     font-size: 20px;
     font-weight: 500;
     line-height: normal;
